change homepage link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://colewhaley1.github.io/portfolio/src/main.tsx",
+  "homepage": "https://colewhaley1.github.io/portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
