--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://colewhaley1.github.io/portfolio/",
+  "homepage": "https://colewhaley1.github.io/portfolio/dist/index.html",
   "private": true,
   "version": "0.0.0",
   "type": "module",
